--- a/src/config.yml
+++ b/src/config.yml
@@ -14,6 +14,9 @@ moneyAmount:
   from: 3.0
   to: 8.0
 
+# Should money be rounded when given (i.e. $3 $6 $8) or not (i.e. $2.3 $5.8 $8.0).
+roundedMoney: false
+
 # Should coins be stacked? (Or should a coin be one on its own?)
 # Stacked coins don't act like one coin. The stack is counted and the worth is multiplied.
 # Not stacking coins is just for a cooler effect (but probably laggier).
@@ -79,5 +82,8 @@ loseOnDeath: true
 
 # If so, how much will be taken?
 moneyTaken:
-  from: 100.0
-  to: 150.0
+  from: 100
+  to: 150
+
+# The message in the middle of their screen.
+deathMessage: "&4- &c$%amount%"
