--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,8 @@
 author: JustEli
-version: 1.3
+version: 1.4
 main: me.justeli.coins.main.Coins
 name: Coins
-depend: [Vault]
+softdepend: [Vault]
 
 commands:
   coins:
