--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,8 +1,8 @@
 author: JustEli
-version: "1.8"
+version: "1.8.1"
 main: me.justeli.coins.main.Coins
 name: Coins
-softdepend: [Vault]
+softdepend: [Vault, WorldGuard, mcMMO]
 
 commands:
   coins:
