--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,9 +1,11 @@
 author: JustEli
-version: "1.8.1"
+version: "1.9"
 main: me.justeli.coins.main.Coins
 name: Coins
 softdepend: [Vault, WorldGuard, mcMMO]
+api-version: "1.13"
 
 commands:
   coins:
-    aliases: [coin, withdraw]
+    aliases: [coin]
+  withdraw:
