--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <!-- BuildTools.jar is ran and this will work. -->
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
