bunch of code cleanup (needs testing)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,9 +3,13 @@ name: "${project.name}"
 version: "${project.version}"
 author: JustEli
 website: "${project.url}"
-softdepend: [Vault, WorldGuard, mcMMO, MythicMobs]
+softdepend:
+  - Vault
+  - WorldGuard
+  - mcMMO
+  - MythicMobs
 api-version: "1.13"
 commands:
   coins:
     aliases: [coin]
-  withdraw:
+  withdraw: {}
