--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.justeli.coins</groupId>
     <artifactId>Coins</artifactId>
-    <version>1.10.5</version>
+    <version>1.10.6</version>
     <name>Coins</name>
     <url>https://www.spigotmc.org/resources/coins.33382/</url>
 
@@ -51,8 +51,12 @@
                     <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                     <relocations>
                         <relocation>
-                            <pattern>io.papermc.lib</pattern>
-                            <shadedPattern>me.justeli.coins.paperlib</shadedPattern>
+                            <pattern>io.papermc</pattern>
+                            <shadedPattern>me.justeli.coins.shaded.io.papermc</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>me.justeli.coins.shaded.org.bstats</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
@@ -109,16 +113,23 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>io.lumine.xikage</groupId>
+            <artifactId>MythicMobs</artifactId>
+            <version>4.9.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- Compile -->
+        <dependency>
             <groupId>io.papermc</groupId>
             <artifactId>paperlib</artifactId>
             <version>1.0.6</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.lumine.xikage</groupId>
-            <artifactId>MythicMobs</artifactId>
-            <version>4.9.1</version>
-            <scope>provided</scope>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>2.2.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
