--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,15 +1,17 @@
 main: "${project.groupId}.${project.name}"
 name: "${project.name}"
 version: "${project.version}"
-author: JustEli
 website: "${project.url}"
+api-version: "1.13"
+authors:
+  - JustEli
 softdepend:
   - Vault
   - WorldGuard
   - mcMMO
   - MythicMobs
-api-version: "1.13"
 commands:
   coins:
-    aliases: [coin]
+    aliases:
+      - coin
   withdraw: {}
